--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pydantic>=2.0,<3.0",
     "pyyaml>=6.0,<7.0",
     "streamlit>=1.30,<2.0",
+    "numpy>=1.24,<3.0",
 ]
 
 [project.optional-dependencies]
