--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "pyyaml>=6.0,<7.0",
     "streamlit>=1.30,<2.0",
     "numpy>=1.24,<3.0",
+    "pandas>=2.0,<3.0",
+    "plotly>=5.0,<6.0",
+    "scipy>=1.10,<2.0",
 ]
 
 [project.optional-dependencies]
