--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,19 @@ dependencies = [
     "pandas>=2.0,<3.0",
     "plotly>=5.0,<6.0",
     "scipy>=1.10,<2.0",
+    "fastapi>=0.110,<1.0",
+    "uvicorn[standard]>=0.27,<1.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0,<9.0",
     "pytest-cov>=4.0,<6.0",
+    "httpx>=0.27,<1.0",
 ]
+
+[project.scripts]
+zng-api = "zng_simulator.api.server:main"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/zng_simulator"]
